--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -1,7 +1,9 @@
 $primary-color: rgb(255, 118, 118);
 $primary-color-darker: rgb(255, 109, 109);
 $intro-block-width: 250px;
+$intro-block-extra-margin: 100px;
 $timeline-container-width: 250px;
+$landing-page-timeline-distance-to-top: 70px;
 $timeline-margin: 30px; // edit this to shift timeline position
 $timeline-width: 4px;
 $accordion-width: 470px;
